# libvmod-cowsay

./: .gitignore  Makefile.am  README.rst  configure.ac  rename-vmod-script  vmod-cowsay.spec
debian/: changelog  control  dirs
src/: Makefile.am  cowsay.h  vmod_cowsay.c  vmod_cowsay.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc
